--- a/QT/PKGBUILD
+++ b/QT/PKGBUILD
@@ -6,22 +6,22 @@ pkgdesc="A real-time 3D viewer for displaying LDraw models"
 url="http://sourceforge.net/projects/ldview"
 arch=('x86_64' 'i686')
 license=('GPL')
-depends=('qt4' 'boost-libs' 'libpng' 'libjpeg-turbo' 'libgl' 'boost')
-makedepends=('cmake' 'kdelibs' 'automoc4' 'phonon-qt4-gstreamer' 'glu')
+depends=('qt4' 'boost-libs' 'libpng' 'libjpeg-turbo' 'mesa-libgl' 'boost')
+makedepends=('cmake' 'kdelibs' 'automoc4' 'glu' 'phonon-qt4-gstreamer')
 conflicts=()
 replaces=()
 backup=()
-source=("LDView.tar.gz")
-md5sums=('d8774919e5544b483d5f9b9c8f228dd3')
+source=("ldview-git.tar.gz")
+md5sums=(SKIP)
 
 build() {
-  cd ${srcdir}/LDView/3rdParty/tinyxml
+  cd ${srcdir}/ldview-git/3rdParty/tinyxml
   make -f Makefile.pbartfai
   cp -f libtinyxml.a ../../lib
-  cd ${srcdir}/LDView/gl2ps
+  cd ${srcdir}/ldview-git/gl2ps
   make
   cp -f libgl2ps.a ../lib
-  cd ${srcdir}/LDView/QT
+  cd ${srcdir}/ldview-git/QT
   if test "$CARCH" == x86_64; then
     PLATFORM=linux-g++-64
   else
@@ -29,7 +29,7 @@ build() {
   fi
   if [ -x /usr/bin/qmake ] ; then qmake LIBS+=-lboost_system -spec $PLATFORM ; lrelease LDView.pro ; fi
   if [ -x /usr/bin/qmake-qt4 ] ; then qmake-qt4 LIBS+=-lboost_system -spec $PLATFORM ; lrelease-qt4 LDView.pro ; fi
-  make "TESTING=-I ../gl2ps"
+  make "TESTING=-I ../gl2ps -I ../3rdParty/tinyxml"
   cd kde
   if [ -d build ]; then rm -rf build ; fi
   mkdir -p build
@@ -37,12 +37,12 @@ build() {
   if cmake -DCMAKE_INSTALL_PREFIX=`kde4-config --prefix` .. ; then
     make
   fi
-  cd ${srcdir}/LDView/OSMesa
+  cd ${srcdir}/ldview-git/OSMesa
   #make
 }
  
 package() {
-  cd "${srcdir}/LDView/QT"
+  cd "${srcdir}/ldview-git/QT"
   mkdir -p ${pkgdir}/usr/bin
   mkdir -p ${pkgdir}/usr/share/ldview
   install -m 755 LDView ${pkgdir}/usr/bin
