--- a/QT/docker/Dockerfile-ubuntu_latest
+++ b/QT/docker/Dockerfile-ubuntu_latest
@@ -1,10 +1,13 @@
-FROM ubuntu:18.04
+FROM ubuntu:latest
 MAINTAINER Peter Bartfai pbartfai@stardust.hu
 
+ARG LDVIEW_BRANCH=master
+ENV DEBIAN_FRONTEND=noninteractive
 ADD install-devel-packages.sh /
 RUN ./install-devel-packages.sh
 
 VOLUME /mnt/lego
 CMD cd ldview/QT ; \
 	git pull; \
-	./makedeb -qt5 ; \
+	sed -i 's/kdelibs5-dev//g' debian/control ; \
+	./makedeb -qt5
