--- a/QT/PKGBUILD
+++ b/QT/PKGBUILD
@@ -9,7 +9,7 @@ arch=('x86_64' 'i686')
 license=('GPL')
 #Qt5.x
 depends=('qt5-base' 'qt5-tools' 'libpng' 'libjpeg-turbo' 'mesa-libgl' 'gl2ps' 'tinyxml' 'minizip')
-makedepends=('kdelibs4support' 'glu' 'gcc' 'make' 'cmake' 'extra-cmake-modules')
+makedepends=('glu' 'gcc' 'make' 'cmake' 'extra-cmake-modules')
 conflicts=()
 replaces=()
 backup=()
