--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,8 +23,8 @@ environment:
       QT: 5.15
     - APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu2204
       QT: 6.5
-    - APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu2204
-      QT: 6.7
+#    - APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu2204
+#      QT: 6.7
     - APPVEYOR_BUILD_WORKER_IMAGE: macos-sonoma
 
 install:
