--- a/appveyor.yml
+++ b/appveyor.yml
@@ -43,7 +43,7 @@ install:
 - sh: if [ `uname -s` = Linux ] ; then if [ -z "$QT" ] ; then sudo apt-get install -y -qq --no-install-recommends qtbase5-dev qt5-qmake qttools5-dev-tools libqt5opengl5-dev cmake libosmesa6-dev build-essential debhelper lintian fakeroot extra-cmake-modules libkf5kio-dev libkf5kdelibs4support5-bin ; fi ; fi
 
 build_script:
-- sh: if [ `uname -s` = Linux ] ; then cd QT; sed -i 's/kdelibs5-dev//g' debian/control ; if [ -n "$QT" ] ; then $HOME/Qt/$QT/gcc_64/bin/qmake -spec linux-g++-64 ; make ; else ./makedeb -qt5 ; fi ; fi
+- sh: if [ `uname -s` = Linux ] ; then cd QT; if [ -n "$QT" ] ; then $HOME/Qt/$QT/gcc_64/bin/qmake -spec linux-g++-64 ; make ; else ./makedeb -qt5 ; fi ; fi
 - sh: if [ `uname -s` = Darwin ] ; then cd MacOSX/LDView ; xcodebuild ; fi
 - cmd: msbuild "C:\projects\ldview\LDView.sln" /verbosity:minimal /p:PlatformToolset=%TOOLSET% /p:WindowsTargetPlatformVersion=%SDK% /p:Configuration=Release /p:Platform=x64 /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
 - cmd: msbuild "C:\projects\ldview\LDView.sln" /verbosity:minimal /p:PlatformToolset=%TOOLSET% /p:WindowsTargetPlatformVersion=%SDK% /p:Configuration=Release /p:Platform=win32 /t:Launcher /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
