--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Build LDView
 on: [push, pull_request]
 jobs:
   build-ubuntu:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -12,7 +12,7 @@ jobs:
         run: cd QT ; ./makedeb -qt5
   
   build-fedora:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     container:
       image: fedora:latest
     steps:
