--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,8 +23,8 @@ jobs:
       - name: Build LDView
         run:  cd QT ; mkdir -p ~/rpmbuild/{BUILD,RPMS,SOURCES,SPECS,SRPMS} ; ./makerpm
 
-  build-windows:
-    runs-on: windows-2019
+  build-windows-2025:
+    runs-on: windows-2025
     steps:
       - name: Checkout
         uses: actions/checkout@v4
