--- a/appveyor.yml
+++ b/appveyor.yml
@@ -32,9 +32,9 @@ environment:
     - APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu2204
       QT: 5.15
     - APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu2204
-      QT: 6.8.3
-    - APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu2204
-      QT: 6.9.1
+      QT: 6.5
+#    - APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu2204
+#      QT: 6.9.1
     - APPVEYOR_BUILD_WORKER_IMAGE: macos-sonoma
 
 install:
@@ -50,5 +50,6 @@ build_script:
 - cmd: msbuild "C:\projects\ldview\LDViewThumbs\LDViewThumbs.vcxproj" /verbosity:minimal /p:PlatformToolset=%TOOLSET% /p:WindowsTargetPlatformVersion=%SDK% /p:Configuration=Release /p:SolutionDir=C:\projects\ldview\ /p:Platform=x64 /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
 - cmd: msbuild "C:\projects\ldview\LDViewThumbs\LDViewThumbs.vcxproj" /verbosity:minimal /p:PlatformToolset=%TOOLSET% /p:WindowsTargetPlatformVersion=%SDK% /p:Configuration=Release /p:SolutionDir=C:\projects\ldview\ /p:Platform=win32 /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
 #- cmd: if exist "\Program Files (x86)\Inno Setup 6\iscc.exe" "\Program Files (x86)\Inno Setup 6\iscc.exe" C:\projects\ldview\LDView64.iss
+
 
 
